---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 26.04.2024
  Bugfixes:
    - fixed an issue with tech costs in K2

---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 17.04.2024
  Bugfixes:
    - fixed an issue with K2 pumps
    - fixed an issue with K2 satellite returns
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 16.04.2024
  Bugfixes:
    - fixed an issue with mods that techs without effects
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 13.04.2024
  Features:
    - added a matter tech for bio matter (K2)
  Changes:
    - adjusted K2s equipment to better fit in progression
    - added more whitelists for selection tools (PR #67)
  Bugfixes:
    - fixed an that k2 was not swapped correctly
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 13.04.2024
  Bugfixes:
    - fixed an issue when techs have no effects declared
    - fixed issue in tech recursion skript
    - fixed issue with compat script when K2 is not present
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 11.04.2024
  Features:
    - added K2 compat
  Changes:
    - scanner now highlights only entities it can scan (PR #66)
  Bugfixes:
    - fix in item cleanup script (PR #61)
    - fixed issue when using scanner before knowledge console is put down (I #63)
    - fixed issue when opening rocket silo placed by bots (I #62)
---------------------------------------------------------------------------------------------------
Version: 0.5.9
Date: 19.02.2024
  Features:
    - added support for minibuffer tank mods
    - added basic Space Exploration data phase compatibilty (PR #57) 