@@ -3,6 +3,7 @@ Version: 0.6.6
 Date: 26.04.2024
   Bugfixes:
     - fixed an issue with tech costs in K2
+    - fixed an issue with pistol ammon and K2 when specific mods are present
 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.5
